add page login and signup

--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -57,6 +57,9 @@
                   <li>
                     <a href="/home/" class="panel-close">Accueil</a>
                   </li>
+				  <li>
+                    <a href="/about/" class="panel-close">A Propos de nous</a>
+                  </li>
                   <li>
                     <a href="/signin/" class="panel-close">Connexion</a>
                   </li>
