--- a/platforms/browser/www/pages/about.html
+++ b/platforms/browser/www/pages/about.html
@@ -8,11 +8,11 @@
           <span class="if-not-md">Back</span>
         </a>
       </div>
-      <div class="title">About</div>
+      <div class="title">A Propos de nous</div>
     </div>
   </div>
   <div class="page-content">
-    <div class="block-title">About My App</div>
+    <div class="block-title">Bienvenue sur MATOUA</div>
     <div class="block">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni molestiae laudantium dignissimos est nobis
         delectus nemo ea alias voluptatum architecto, amet similique, saepe iste consectetur in repellat ut minus
