--- a/platforms/browser/www/pages/publish-ride.html
+++ b/platforms/browser/www/pages/publish-ride.html
@@ -166,6 +166,9 @@
   .timeline-item-content {
     width: 100%;
   }
+  .navbar-inner .link .icon {
+    color: #fff;
+  }
 </style>
 <script>
   export default (props, { $f7, $, $on }) => {
