--- a/platforms/browser/www/pages/signup.html
+++ b/platforms/browser/www/pages/signup.html
@@ -45,43 +45,19 @@
               </div>
             </li>
 			<li class="item-content item-input">
-                    <div class="item-inner">
-                      <div class="item-title label">Téléchargez votre CNI</div>
-                      <div class="item-input-wrap">
-                        <div class="fincarimage">
-                          <img
-                            id="smallImage"
-                            src="assets/img/camera.png"
-                            class="img-responsive"
-                            alt=""
-                            style="margin: 0 auto; width: 64px; display: block"
-                          />
-                        </div>
-                        <p class="buttons-row">
-                          <a
-                            href="#"
-                            class="button button-block button-big button-raised button-round color-gray getImageALBUM"
-                          >
-                            <i class="fa fa-image"></i>
-                            <span tkey="PHOTO_GALERY">Galerie photo</span>
-                          </a>
-                          <a
-                            href="#"
-                            class="button button-block button-big button-raised button-round color-gray getImageCAMERA"
-                          >
-                            <i class="fa fa-camera-retro"></i>
-                            <span tkey="CAMERA">Appareil photo</span>
-                          </a>
-                        </p>
-                        <span class="input-clear-button"></span>
-                      </div>
-                    </div>
-                  </li>
+              <div class="item-inner">
+                <div class="item-title item-label">Téléchargez votre CNI</div>
+                <div class="item-input-wrap">
+                  <input type="file" placeholder="Téléchargez votre CNI" id="idcard" accept="image/*" capture="camera" class="" />
+                </div>
+              </div>
+            </li>
+			
           </ul>
         </div>
-        <div class="list inset">
+        <div class="block list inset">
           <ul>
-            <li><a class="list-button" @click=${signUp}>S'inscrire</a></li>
+            <li><a class="button button-fill button-round color-black list-button" @click=${signUp}>S'inscrire</a></li>
           </ul>
           <div class="block-footer">Vous avez déjà un compte ?<br /><a class="link" href="/signin/">Se connecter</a></div>
         </div>
@@ -89,6 +65,13 @@
     </div>
   </div>
 </template>
+<style>
+.img-responsive{
+margin: 0 auto;
+    display: block;
+    max-width: 200px;
+}
+</style>
 <script>
   export default (props, { $, $f7, $f7router }) => {
     const signUp = () => {
@@ -96,10 +79,32 @@
 	  let email = $('input#email').val();
 	  let phone = $('input#phone').val();
       let password = $('input#password').val();
-      $f7.dialog.alert('Username: ' + phone + '<br />Password: ' + password, function () {
-        $f7.loginScreen.close();
-        $f7router.back();
-      })
+	  
+      if(fullname == "" || password == "" || phone == "") {
+			app.dialog.alert('Veuillez renseigner tous les champs SVP !')
+		}else {
+				
+			app.request.postJSON('http://matoua/api/register', {fullname: fullname,email:email,phone:phone, password: password}, function (data, status, xhr) {
+				var status = JSON.parse(status);
+				console.log(status);
+				if(status == 200) {
+					if (!self.notificationFull) {
+						self.notificationFull = self.$app.notification.create({
+							icon: '<i class="icon icon-f7"></i>',
+							title: 'CRUD',
+							titleRightText: '',
+							subtitle: 'Notification',
+							text: 'Connexion réussie !',
+							closeTimeout: 3000,
+						});
+					}
+					self.notificationFull.open();
+					app.views.main.router.navigate('/home/');
+				}else {
+					app.dialog.alert('Ooups! Une erreur s\'est produite ressayez plus tard svp !');
+				}
+			});
+		}
     }
 
     return $render;
