--- a/platforms/browser/www/pages/signin.html
+++ b/platforms/browser/www/pages/signin.html
@@ -28,9 +28,9 @@
             </li>
           </ul>
         </div>
-        <div class="list inset">
+        <div class="block list inset">
           <ul>
-            <li><a class="list-button" @click=${signIn}>Se connecter</a></li>
+            <li><a class="button button-fill button-round color-black list-button" @click=${signIn}>Se connecter</a></li>
           </ul>
           <div class="block-footer">Vous n'avez pas encore de compte ?<br /><a class="link" href="/signup/">Créer mon compte</a></div>
         </div>
@@ -38,15 +38,43 @@
     </div>
   </div>
 </template>
+<style>
+.img-responsive{
+margin: 0 auto;
+    display: block;
+    max-width: 200px;
+}
+</style>
 <script>
   export default (props, { $, $f7, $f7router }) => {
     const signIn = () => {
       let username = $('input#username').val();
       let password = $('input#password').val();
-      $f7.dialog.alert('Username: ' + username + '<br />Password: ' + password, function () {
-        $f7.loginScreen.close();
-        $f7router.back();
-      })
+	  
+      if(username == "" || password == "") {
+			app.dialog.alert('Veuillez renseigner tous les champs SVP !')
+		}else {
+			app.request.postJSON('http://matoua/api/auth', {username: username, password: password}, function (data, status, xhr) {
+				var status = JSON.parse(status);
+				console.log(status);
+				if(status == 200) {
+					if (!self.notificationFull) {
+						self.notificationFull = self.$app.notification.create({
+							icon: '<i class="icon icon-f7"></i>',
+							title: 'CRUD',
+							titleRightText: '',
+							subtitle: 'Notification',
+							text: 'Connexion réussie !',
+							closeTimeout: 3000,
+						});
+					}
+					self.notificationFull.open();
+					app.views.main.router.navigate('/home/');
+				}else {
+					app.dialog.alert('Ooups! Une erreur s\'est produite ressayez plus tard svp !');
+				}
+			});
+		}
     }
 
     return $render;
