--- a/www/index.html
+++ b/www/index.html
@@ -60,6 +60,9 @@
 				  <li>
                     <a href="/about/" class="panel-close">A Propos de nous</a>
                   </li>
+				  <li>
+                    <a href="/user-profile/" class="panel-close">Mon compte</a>
+                  </li>
                   <li>
                     <a href="/signin/" class="panel-close">Connexion</a>
                   </li>
