Add API on page

--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -48,7 +48,7 @@
             <div class="navbar">
               <div class="navbar-bg"></div>
               <div class="navbar-inner">
-                <div class="title">CAR-DI-GO</div>
+                <div class="title color-white">MATOUA</div>
               </div>
             </div>
             <div class="page-content">
@@ -57,16 +57,19 @@
                   <li>
                     <a href="/home/" class="panel-close">Accueil</a>
                   </li>
-				  <li>
+                  <li>
                     <a href="/about/" class="panel-close">A Propos de nous</a>
                   </li>
-				  <li>
+                  <li class="with-login">
                     <a href="/user-profile/" class="panel-close">Mon compte</a>
                   </li>
-                  <li>
+                  <li class="with-login">
+                    <a href="/my-ride/" class="panel-close">Mes trajets</a>
+                  </li>
+                  <li class="without-login">
                     <a href="/signin/" class="panel-close">Connexion</a>
                   </li>
-                  <li>
+                  <li class="without-login">
                     <a href="/signup/" class="panel-close">Inscription</a>
                   </li>
                   <li>
@@ -111,7 +114,7 @@
               <div class="splash-media">
                 <img
                   class="logo img-responsive"
-                  src="assets/img/logo.png"
+                  src="assets/img/car-di-go.png"
                   alt="logo"
                 />
               </div>
