--- a/platforms/browser/www/pages/walkthrough.html
+++ b/platforms/browser/www/pages/walkthrough.html
@@ -8,7 +8,7 @@
         autoplay="true"
       >
         <swiper-slide class="swiper-slide walkthrough-slide">
-          <div class="slide-title">Bienvenue sur CAR-DI-GO</div>
+          <div class="slide-title">Bienvenue sur mATOUA</div>
           <div class="slide-media">
             <img
               src="assets/img/undraw_destination_re_sr74.svg"
