--- a/platforms/browser/www/pages/dynamic-route.html
+++ b/platforms/browser/www/pages/dynamic-route.html
@@ -14,13 +14,20 @@
     </div>
     <div class="page-content">
       <div class="block block-strong inset">
-        <p>Component page template is compiled as ES Template. In addition it has lifecycle hooks, events handling, data
-          managment and Virtual DOM data bindings.</p>
-        <p>It is useful to use Component page when you need page-specific logic.</p>
+        <p>
+          Component page template is compiled as ES Template. In addition it has
+          lifecycle hooks, events handling, data managment and Virtual DOM data
+          bindings.
+        </p>
+        <p>
+          It is useful to use Component page when you need page-specific logic.
+        </p>
       </div>
       <div class="block-title">Events Handling</div>
       <div class="block block-strong inset">
-        <a href="#" class="button button-fill" @click=${openAlert}>Open Alert</a>
+        <a href="#" class="button button-fill" @click="${openAlert}"
+          >Open Alert</a
+        >
       </div>
       <div class="block-title">Page Component Data</div>
       <div class="block block-strong inset">
@@ -34,10 +41,13 @@
       </div>
       <div class="block-title">Extended Context</div>
       <div class="block block-strong inset">
-        <p>Component page context as Template7 page context is also extended with some additional variables.</p>
+        <p>
+          Component page context as Template7 page context is also extended with
+          some additional variables.
+        </p>
         <h4>$f7route</h4>
         <p>Contains properties of the current route:</p>
-        <ul style="padding-left:25px">
+        <ul style="padding-left: 25px">
           <li><b>$f7route.url</b>: ${$f7route.url}</li>
           <li><b>$f7route.path</b>: ${$f7route.path}</li>
           <li><b>$f7route.params</b>: ${JSON.stringify($f7route.params)}</li>
@@ -47,7 +57,7 @@
 
         <h4>$theme</h4>
         <p>Currently active theme:</p>
-        <ul style="padding-left:25px">
+        <ul style="padding-left: 25px">
           <li><b>$theme.ios</b>: ${$theme.ios}</li>
           <li><b>$theme.md</b>: ${$theme.md}</li>
         </ul>
@@ -61,52 +71,55 @@
   }
 </style>
 <script>
-  export default function (props, { $f7, $on, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted }) {
+  export default function (
+    props,
+    { $f7, $on, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted }
+  ) {
     // Component Data
-    let name = 'Jimmy';
+    let name = "Jimmy";
     let age = 25;
-    let likes = ['Tennis', 'Chess', 'Football'];
+    let likes = ["Tennis", "Chess", "Football"];
 
     // Component Methods
     const openAlert = () => {
-      $f7.dialog.alert('Hello World');
-    }
+      $f7.dialog.alert("Hello World");
+    };
 
     // Lifecycle
     $onBeforeMount(() => {
-      console.log('onBeforeMount');
+      console.log("onBeforeMount");
     });
     $onMounted(() => {
-      console.log('onMounted');
+      console.log("onMounted");
     });
     $onBeforeUnmount(() => {
-      console.log('onBeforeUnmount');
+      console.log("onBeforeUnmount");
     });
     $onUnmounted(() => {
-      console.log('onUnmounted');
+      console.log("onUnmounted");
     });
 
     // Page Events
-    $on('pageMounted', (e, page) => {
-      console.log('pageMounted', page);
+    $on("pageMounted", (e, page) => {
+      console.log("pageMounted", page);
     });
-    $on('pageInit', (e, page) => {
-      console.log('pageInit', page);
+    $on("pageInit", (e, page) => {
+      console.log("pageInit", page);
     });
-    $on('pageBeforeIn', (e, page) => {
-      console.log('pageBeforeIn', page);
+    $on("pageBeforeIn", (e, page) => {
+      console.log("pageBeforeIn", page);
     });
-    $on('pageAfterIn', (e, page) => {
-      console.log('pageAfterIn', page);
+    $on("pageAfterIn", (e, page) => {
+      console.log("pageAfterIn", page);
     });
-    $on('pageBeforeOut', (e, page) => {
-      console.log('pageBeforeOut', page);
+    $on("pageBeforeOut", (e, page) => {
+      console.log("pageBeforeOut", page);
     });
-    $on('pageAfterOut', (e, page) => {
-      console.log('pageAfterOut', page);
+    $on("pageAfterOut", (e, page) => {
+      console.log("pageAfterOut", page);
     });
-    $on('pageBeforeRemove', (e, page) => {
-      console.log('pageBeforeRemove', page);
+    $on("pageBeforeRemove", (e, page) => {
+      console.log("pageBeforeRemove", page);
     });
 
     // Return render function
