--- a/platforms/browser/www/pages/signin.html
+++ b/platforms/browser/www/pages/signin.html
@@ -1,19 +1,27 @@
 <template>
   <div class="page no-toolbar no-navbar no-swipeback login-screen-page">
     <div class="page-content login-screen-content">
-      <div class="login-screen-title"><img
-            class="logo img-responsive"
-            src="assets/img/logo.png"
-            alt="logo"
-          /></div>
+      <div class="login-screen-title">
+        <img
+          class="logo img-responsive"
+          src="assets/img/car-di-go.png"
+          alt="logo"
+        />
+      </div>
       <form>
         <div class="list">
           <ul>
             <li class="item-content item-input item-input-with-value">
               <div class="item-inner">
-                <div class="item-title item-label">Téléphone</div>
+                <div class="item-title item-label">E-mail</div>
                 <div class="item-input-wrap">
-                  <input type="text" placeholder="Votre numéro de téléphone" id="username" class="input-with-value" />
+                  <input
+                    type="text"
+                    placeholder="Votre adresse mail"
+                    id="email"
+                    name="email"
+                    class="input-with-value"
+                  />
                   <span class="input-clear-button"></span>
                 </div>
               </div>
@@ -22,7 +30,13 @@
               <div class="item-inner">
                 <div class="item-title item-label">Mot de passe</div>
                 <div class="item-input-wrap">
-                  <input type="password" placeholder="Votre mot de passe" id="password" class="" />
+                  <input
+                    type="password"
+                    placeholder="Votre mot de passe"
+                    id="password"
+                    name="password"
+                    class=""
+                  />
                 </div>
               </div>
             </li>
@@ -30,54 +44,93 @@
         </div>
         <div class="block list inset">
           <ul>
-            <li><a class="button button-fill button-round color-black list-button" @click=${signIn}>Se connecter</a></li>
+            <li>
+              <a
+                class="button button-fill button-round color-black list-button"
+                @click="${signIn}"
+                >Se connecter</a
+              >
+            </li>
           </ul>
-          <div class="block-footer">Vous n'avez pas encore de compte ?<br /><a class="link" href="/signup/">Créer mon compte</a></div>
+
+          <div class="block-footer">
+            Vous n'avez pas encore de compte ?<br /><a
+              class="link"
+              href="/signup/"
+              >Créer mon compte</a
+            >
+          </div>
         </div>
       </form>
     </div>
   </div>
 </template>
 <style>
-.img-responsive{
-margin: 0 auto;
+  .img-responsive {
+    margin: 0 auto;
     display: block;
     max-width: 200px;
-}
+  }
+  .login-screen-page .page-content {
+    padding-top: 10px;
+  }
 </style>
 <script>
   export default (props, { $, $f7, $f7router }) => {
     const signIn = () => {
-      let username = $('input#username').val();
-      let password = $('input#password').val();
-	  
-      if(username == "" || password == "") {
-			app.dialog.alert('Veuillez renseigner tous les champs SVP !')
-		}else {
-			app.request.postJSON('http://matoua/api/auth', {username: username, password: password}, function (data, status, xhr) {
-				var status = JSON.parse(status);
-				console.log(status);
-				if(status == 200) {
-					if (!self.notificationFull) {
-						self.notificationFull = self.$app.notification.create({
-							icon: '<i class="icon icon-f7"></i>',
-							title: 'CRUD',
-							titleRightText: '',
-							subtitle: 'Notification',
-							text: 'Connexion réussie !',
-							closeTimeout: 3000,
-						});
-					}
-					self.notificationFull.open();
-					app.views.main.router.navigate('/home/');
-				}else {
-					app.dialog.alert('Ooups! Une erreur s\'est produite ressayez plus tard svp !');
-				}
-			});
-		}
-    }
+      let email = $("input#email").val();
+      let password = $("input#password").val();
+
+      if (email == "" || password == "") {
+        app.dialog.alert("Veuillez renseigner tous les champs SVP !");
+      } else {
+        // API endpoint for creating a new user
+        const apiUrl = "http://matoua.com/api/login";
+
+        // Form data to be sent in the request body
+        const formData = {
+          email: email,
+          password: password,
+        };
+
+        // Make a POST request using the Fetch API
+        fetch(apiUrl, {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify(formData),
+        })
+          .then((response) => {
+            if (!response.ok) {
+              if (response.status == 401) {
+                app.dialog.alert(
+                  "Ooups! E-mail ou mot de passe incorrect ressayez svp !"
+                );
+              } else {
+                throw new Error("Network response was not ok");
+              }
+            }
+            return response.json();
+          })
+          .then((newUserData) => {
+            // Process the newly created user data
+            console.log("New User Data:", newUserData);
+
+            localStorage.setItem("userId", newUserData.user.id);
+            localStorage.setItem("fullname", newUserData.user.fullname);
+            localStorage.setItem("phone", newUserData.user.phone);
+            localStorage.setItem("email", newUserData.user.email);
+            localStorage.setItem("token", newUserData.accessToken);
+
+            app.views.main.router.navigate("/home/");
+          })
+          .catch((error) => {
+            console.error("Error:", error);
+          });
+      }
+    };
 
     return $render;
   };
-
 </script>
