--- a/www/pages/signup.html
+++ b/www/pages/signup.html
@@ -1,11 +1,13 @@
 <template>
   <div class="page no-toolbar no-navbar no-swipeback login-screen-page">
     <div class="page-content login-screen-content">
-      <div class="login-screen-title"><img
-            class="logo img-responsive"
-            src="assets/img/logo.png"
-            alt="logo"
-          /></div>
+      <div class="login-screen-title">
+        <img
+          class="logo img-responsive"
+          src="assets/img/car-di-go.png"
+          alt="logo"
+        />
+      </div>
       <form>
         <div class="list">
           <ul>
@@ -13,25 +15,40 @@
               <div class="item-inner">
                 <div class="item-title item-label">Nom(s)</div>
                 <div class="item-input-wrap">
-                  <input type="text" placeholder="Votre nom" id="fullname" class="input-with-value" />
+                  <input
+                    type="text"
+                    placeholder="Votre nom"
+                    id="fullname"
+                    class="input-with-value"
+                  />
                   <span class="input-clear-button"></span>
                 </div>
               </div>
             </li>
-			<li class="item-content item-input item-input-with-value">
+            <li class="item-content item-input item-input-with-value">
               <div class="item-inner">
                 <div class="item-title item-label">Téléphone</div>
                 <div class="item-input-wrap">
-                  <input type="text" placeholder="Votre numéro de téléphone" id="phone" class="input-with-value" />
+                  <input
+                    type="text"
+                    placeholder="Votre numéro de téléphone"
+                    id="phone"
+                    class="input-with-value"
+                  />
                   <span class="input-clear-button"></span>
                 </div>
               </div>
             </li>
-			<li class="item-content item-input item-input-with-value">
+            <li class="item-content item-input item-input-with-value">
               <div class="item-inner">
                 <div class="item-title item-label">E-mail</div>
                 <div class="item-input-wrap">
-                  <input type="email" placeholder="Votre adresse mail" id="email" class="input-with-value" />
+                  <input
+                    type="email"
+                    placeholder="Votre adresse mail"
+                    id="email"
+                    class="input-with-value"
+                  />
                   <span class="input-clear-button"></span>
                 </div>
               </div>
@@ -40,74 +57,119 @@
               <div class="item-inner">
                 <div class="item-title item-label">Mot de passe</div>
                 <div class="item-input-wrap">
-                  <input type="password" placeholder="Votre mot de passe" id="password" class="" />
+                  <input
+                    type="password"
+                    placeholder="Votre mot de passe"
+                    id="password"
+                    class=""
+                  />
                 </div>
               </div>
             </li>
-			<li class="item-content item-input">
+            <li class="item-content item-input">
               <div class="item-inner">
                 <div class="item-title item-label">Téléchargez votre CNI</div>
                 <div class="item-input-wrap">
-                  <input type="file" placeholder="Téléchargez votre CNI" id="idcard" accept="image/*" capture="camera" class="" />
+                  <input
+                    type="file"
+                    placeholder="Téléchargez votre CNI"
+                    id="idcard"
+                    accept="image/*"
+                    capture="camera"
+                    class=""
+                  />
                 </div>
               </div>
             </li>
-			
           </ul>
         </div>
         <div class="block list inset">
           <ul>
-            <li><a class="button button-fill button-round color-black list-button" @click=${signUp}>S'inscrire</a></li>
+            <li>
+              <a
+                class="button button-fill button-round color-black list-button"
+                @click="${signUp}"
+                >S'inscrire</a
+              >
+            </li>
           </ul>
-          <div class="block-footer">Vous avez déjà un compte ?<br /><a class="link" href="/signin/">Se connecter</a></div>
+          <div class="block-footer">
+            Vous avez déjà un compte ?<br /><a class="link" href="/signin/"
+              >Se connecter</a
+            >
+          </div>
         </div>
       </form>
     </div>
   </div>
 </template>
 <style>
-.img-responsive{
-margin: 0 auto;
+  .img-responsive {
+    margin: 0 auto;
     display: block;
     max-width: 200px;
-}
+  }
+  .login-screen-page .page-content {
+    padding-top: 10px;
+  }
 </style>
 <script>
   export default (props, { $, $f7, $f7router }) => {
     const signUp = () => {
-      let fullname = $('input#fullname').val();
-	  let email = $('input#email').val();
-	  let phone = $('input#phone').val();
-      let password = $('input#password').val();
-	  
-      if(fullname == "" || password == "" || phone == "") {
-			app.dialog.alert('Veuillez renseigner tous les champs SVP !')
-		}else {
-				
-			app.request.postJSON('http://matoua/api/register', {fullname: fullname,email:email,phone:phone, password: password}, function (data, status, xhr) {
-				var status = JSON.parse(status);
-				console.log(status);
-				if(status == 200) {
-					if (!self.notificationFull) {
-						self.notificationFull = self.$app.notification.create({
-							icon: '<i class="icon icon-f7"></i>',
-							title: 'CRUD',
-							titleRightText: '',
-							subtitle: 'Notification',
-							text: 'Connexion réussie !',
-							closeTimeout: 3000,
-						});
-					}
-					self.notificationFull.open();
-					app.views.main.router.navigate('/home/');
-				}else {
-					app.dialog.alert('Ooups! Une erreur s\'est produite ressayez plus tard svp !');
-				}
-			});
-		}
-    }
+      let fullname = $("input#fullname").val();
+      let email = $("input#email").val();
+      let phone = $("input#phone").val();
+      let password = $("input#password").val();
+
+      if (fullname == "" || password == "" || phone == "") {
+        app.dialog.alert("Veuillez renseigner tous les champs SVP !");
+      } else {
+        // API endpoint for creating a new user
+        const apiUrl = "http://matoua.com/api/register";
+
+        // Form data to be sent in the request body
+        const formData = {
+          fullname: fullname,
+          email: email,
+          phone: phone,
+          password: password,
+        };
+
+        // Make a POST request using the Fetch API
+        fetch(apiUrl, {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify(formData),
+        })
+          .then((response) => {
+            if (!response.ok) {
+              throw new Error("Network response was not ok");
+              app.dialog.alert(
+                "Ooups! Une erreur s'est produite ressayez svp !"
+              );
+            }
+            return response.json();
+          })
+          .then((newUserData) => {
+            // Process the newly created user data
+            console.log("New User Data:", newUserData);
+
+            localStorage.setItem("userId", newUserData.user.id);
+            localStorage.setItem("fullname", newUserData.user.fullname);
+            localStorage.setItem("phone", newUserData.user.phone);
+            localStorage.setItem("email", newUserData.user.email);
+            localStorage.setItem("token", newUserData.accessToken);
+
+            app.views.main.router.navigate("/home/");
+          })
+          .catch((error) => {
+            console.error("Error:", error);
+          });
+      }
+    };
 
     return $render;
   };
-
 </script>
